plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.2'
    id 'io.spring.dependency-management' version '1.1.6'
    id 'org.asciidoctor.jvm.convert' version '3.3.2'
}

group = 'com.gongyeon.io'
version = '0.0.1'


jar {
    enabled = false
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

repositories {
    mavenCentral()
}

ext {
    set('snippetsDir', file("build/generated-snippets"))
}

dependencies {
    // 완성된 보도자료 발송을 위한 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-mail'

    // 메일 인증을 위한 redis 의존성 추가
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    // 파일 관리를 위한 의존성 추가
    implementation 'kr.dogfoot:hwplib:1.1.6'

    // Token 통신을 위한 의존성 추가
    implementation 'io.jsonwebtoken:jjwt-api:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.6'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.6'

    // DB 통신을 위한 의존성 추가(JPA)
    implementation 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Swagger Docs 사용을 위한 의존성 추가
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'

    // Java 내에서 다른 Http Request 발송을 위한 의존성 추가
    // implementation 'org.springframework.boot:spring-boot-starter-webflux:3.3.2'

    // MemberLogin
    implementation 'org.springframework.boot:spring-boot-starter-security'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Basic Setting
    implementation 'org.springframework.boot:spring-boot-starter-web'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testImplementation 'org.springframework.security:spring-security-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
}

tasks.named('test') {
    outputs.dir snippetsDir
    useJUnitPlatform()
}

tasks.named('asciidoctor') {
    inputs.dir snippetsDir
    dependsOn test
}
